adjust intro page on mobile view

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -230,7 +230,7 @@
           animation-duration: 1s;
         position: absolute;
         margin: 0%;
-        height:auto;
+        height:150%;
         color: white;
         z-index: 0;
         top: 0;
