--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -147,7 +147,7 @@
       height:200%;
       color: white;
       z-index: 0;
-      top: 0;
+      top: 10%;
       padding: 15% 0;
       animation-name: col-two-animation-mob;
         animation-duration: 1s;
@@ -233,7 +233,7 @@
         height:auto;
         color: white;
         z-index: 0;
-        top: 0;
+        top: 10%;
         padding: 100% 0 60%;
         font-size: 65px;
       }
@@ -296,7 +296,7 @@
           }
         }
 
-     /*////////////////////////////About Page///////////////////////////////////////////////*/
+     /*////////////////////////////Info Page///////////////////////////////////////////////*/
      .col-two-info{
          display: none !important;
      }
@@ -315,7 +315,7 @@
         height:330%;
         color: white;
         z-index: 0;
-        top: 0;
+        top: 10%;
         padding:30% 0 20%;
         background-color: #1b1b1b !important;
       }
@@ -401,7 +401,7 @@
       font-weight: 300; 
     }
 
-    /*////////////////////////////About Page///////////////////////////////////////////////*/
+    /*////////////////////////////Skills Page///////////////////////////////////////////////*/
     .col-two-skills{
       display: none !important;
   }
@@ -420,7 +420,7 @@
      height:300%;
      color: white;
      z-index: 0;
-     top: 0;
+     top: 10%;
      padding:10% 0 15%;
      background-color: #1b1b1b !important;
    }
