--- a/src/css/info.css
+++ b/src/css/info.css
@@ -15,7 +15,7 @@
     background-color: #1b1b1b !important;
     position: absolute;
     margin-left: 20%;
-    height: 100% !important;
+    height: 120% !important;
     color: white;
     z-index: 0;
   }
@@ -45,7 +45,7 @@
     flex-direction: row;
     justify-content: space-between;
     max-height: 100%;
-    margin: 2% 0 !important;
+    margin: 1% 0 !important;
   }
 
   .first-sec{
@@ -70,10 +70,12 @@
   }
 
   .details-div{
+    height: 40% !important;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     align-items: flex-start;
+    margin-bottom: 1%;
   }
 
   .title{
