--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Electrolize&family=Pixelify+Sans:wght@400..700&display=swap');
+
 body {
-    margin: 0;
-    font-family: "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: "Electrolize", sans-serif !important;
+    letter-spacing: 1px;
 }
 
-a:active{
-  text-decoration: none !important;
-  color: #1b1b1b !important;
+a:active {
+    text-decoration: none !important;
+    color: #1b1b1b !important;
 }
 
 a {
@@ -13,90 +15,11 @@ a {
   color: #1b1b1b !important;
 }
 
-.col-one-mobile,.nav-list-mob, .col-two-works-mob, .container-mob, .col-two-info-mob, .col-two-skills-mob{
-  display: none;
-}
-
-@keyframes col-two-animation {
-  0%   { left:-1000px; opacity: 0; }
-  50%   { opacity: 0.50; }
-  100% { left:0px;  opacity: 1;}
-}
-  
-.container{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    flex-direction: column;
-    /* background-color: #1b1b1b !important; */
-    margin: 0 !important;
-    padding: 0 !important;
-    height: 100%;
-  }
-
-.nav-list-mob, .nav-hide, .col-two-intro-mob{
-  display: none;
-  background-color: white;
-}
-
-  
-  .col-one{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    max-width: 20% !important;
-    width: 20% !important;
-    background-color: #ffffff !important;
-    position: fixed;
-    max-height: 100% !important;
-    height: 100% !important;
-    z-index: 10;
-    animation-name: col-one-animation;
-    animation-duration: 1.5s;
-  }
-  
-  @keyframes col-one-animation {
-    0%   { top:-200px; opacity: 0; }
-    100% { top:0px;  opacity: 1;}
-  }
-  
-  .image{
-    image-rendering: crisp-edges;
-    /* image-rendering: pixelated; */
-  }
-  
-  .image-container{
-    padding-top: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .nav-list{
-    margin-top: 70px; 
-    margin-bottom: 30px;
-    font-size: 23px;
-    font-weight: 500;
-    text-align: center;
-  }
-  
-  .svg-inline--fa{
-    font-size: 25px;
-    color: #1b1b1b;
-    margin: 0 10px;
-  }
-  
-  .fa-caret-right{
-    margin: -10px 5px;
-    padding: 0;
-  }
-  
-  .arrow{
+.fa-caret-right {
     display: none;
-  }
-  
+    margin: 0 !important;
+    padding: 0px 6px !important;
+}
   p .list{
     height: 0;
     margin: 0;
@@ -106,60 +29,596 @@ a {
     color: #1b1b1b;
     text-decoration: none;
   }
-  
 
-  .list {
-    border: none;
-    background-color: transparent;
-    text-decoration: none;
-    color: #1b1b1b;
-    font-size: 23px;
-    line-height: 1.5;
-    font-weight: 500 !important;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  p.list:hover .fa-caret-right{
+.text-xxs {
+    font-size: calc(0.9em);
+    
+}
+
+.pixel-font {
+    font-family: "Pixelify Sans", sans-serif !important;
+}
+
+.text-pixel {
+    font-family: "Pixelify Sans", sans-serif !important;
+    text-shadow: 2px 2px #000000, 3px 3px #ffffff;
+}
+
+.pixel-plain-shadow {
+    font-family: "Pixelify Sans", sans-serif !important;
+    text-shadow: 2px 2px #000000, 3px 3px #ffffff;
+}
+
+
+.nav-link a:hover {
+    animation: glitch 1s steps(100) infinite;
+}
+
+.nav-link:hover .fa-caret-right {
     display: inline-block !important;
-  }
+    color: #1b1b1b !important;
+}
 
-  p.list:active .arrow{
-    display: inline-block !important;
-  }
-  
-  .brand-icon {
-   padding-top: 30px;
-  }
-  
-  .social-bar{
-    margin: 30px 20px 0;
-  }
-  
-  .linkedin:hover{
-    color:#0a66c2;
-  }
-  
-  .github:hover{
-    color:#6e5494;
-  }
+.active a {
+    font-weight: bold !important;
+    font-family: "Pixelify Sans", sans-serif !important;
+    font-weight: 900 !important;
+    font-size: 115% !important;
+}
 
-  .behance:hover{
-    color:#1769ff;
-  }
-  
-  .highlight{
-    color:#61dafb !important;
-  }
+.linkedin:hover path {
+    fill: #0a66c2 !important;
+}
 
-  button{
-    color: none;
-    border-style: none;
-    box-shadow: none;
-    background-color: transparent;
-  }
+.github:hover path {
+    fill: #6e5494 !important;
+}
 
+.behance:hover path {
+    fill: #1769ff !important;
+}
+
+#NavMenu {
+    min-height: 100vh;
+}
+
+.transition-container {
+    animation-name: ease-in-animation;
+    animation-duration: 2s;
+}
+
+@keyframes glitch {
+    0% {
+        text-shadow: 3px 0 0 red, -3px 0 0 #0c33f5, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0);
+    }
+
+    1% {
+        text-shadow: 3px 0 0 red, -3px 0 0 #0c33f5, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0);
+    }
+
+    2% {
+        text-shadow: 3px 0 0 red, -3px 0 0 #0c33f5, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0);
+    }
+
+    3% {
+        text-shadow: 3px 0 0 red, -3px 0 0 #0c33f5, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0);
+    }
+
+    4% {
+        text-shadow: 3px 0 0 red, -3px 0 0 #0c33f5, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0);
+    }
+
+    5% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0);
+    }
+
+    6% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0);
+    }
+
+    7% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0);
+    }
+
+    8% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0);
+    }
+
+    9% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0);
+    }
+
+    10% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0);
+    }
+
+    11% {
+        text-shadow: 1px 0 0 red, -1px 0 0 lime, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0.5px);
+    }
+
+    12% {
+        text-shadow: 1px 0 0 red, -1px 0 0 lime, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0.5px);
+    }
+
+    13% {
+        text-shadow: 1px 0 0 red, -1px 0 0 lime, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0.5px);
+    }
+
+    14% {
+        text-shadow: 1px 0 0 red, -1px 0 0 lime, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0);
+    }
+
+    15% {
+        text-shadow: 1px 0 0 red, -1px 0 0 lime;
+        filter: blur(0);
+    }
+
+    16% {
+        text-shadow: -3px 0 0 red, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    17% {
+        text-shadow: -3px 0 0 red, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    18% {
+        text-shadow: -3px 0 0 red, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    19% {
+        text-shadow: -3px 0 0 red, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    20% {
+        text-shadow: -3px 0 0 red, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    21% {
+        text-shadow: 0.8px 0 0 #0c33f5, -0.8px 0 0 lime;
+        filter: blur(0);
+    }
+
+    22% {
+        text-shadow: 0.8px 0 0 #0c33f5, -0.8px 0 0 lime;
+        filter: blur(0);
+    }
+
+    23% {
+        text-shadow: 0.8px 0 0 #0c33f5, -0.8px 0 0 lime;
+        filter: blur(0);
+    }
+
+    24% {
+        text-shadow: 0.8px 0 0 #0c33f5, -0.8px 0 0 lime;
+        filter: blur(0);
+    }
+
+    25% {
+        text-shadow: 0.8px 0 0 #0c33f5, -0.8px 0 0 lime;
+        filter: blur(0);
+    }
+
+    26% {
+        text-shadow: 0.8px 0 0 #0c33f5, -0.8px 0 0 lime;
+        filter: blur(0.5px);
+    }
+
+    27% {
+        text-shadow: 0.8px 0 0 #0c33f5, -0.8px 0 0 lime;
+        filter: blur(0.5px);
+    }
+
+    28% {
+        text-shadow: 0.8px 0 0 #0c33f5, -0.8px 0 0 lime;
+        filter: blur(0);
+    }
+
+    29% {
+        text-shadow: 0.8px 0 0 #0c33f5, -0.8px 0 0 lime;
+        filter: blur(0);
+    }
+
+    30% {
+        text-shadow: 0.8px 0 0 #0c33f5, -0.8px 0 0 lime;
+        filter: blur(0);
+    }
+
+    31% {
+        text-shadow: -3px 0 0 #0c33f5, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    32% {
+        text-shadow: -3px 0 0 #0c33f5, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    33% {
+        text-shadow: -3px 0 0 #0c33f5, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    34% {
+        text-shadow: -3px 0 0 #0c33f5, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    35% {
+        text-shadow: -3px 0 0 #0c33f5, 3px 0 0 lime;
+        filter: blur(0.5px);
+    }
+
+    36% {
+        text-shadow: -3px 0 0 #0c33f5, 3px 0 0 lime;
+        filter: blur(0.5px);
+    }
+
+    37% {
+        text-shadow: -3px 0 0 #0c33f5, 3px 0 0 lime;
+        filter: blur(0.5px);
+    }
+
+    38% {
+        text-shadow: -3px 0 0 #0c33f5, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    39% {
+        text-shadow: -3px 0 0 #0c33f5, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    40% {
+        text-shadow: -3px 0 0 #0c33f5, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    41% {
+        text-shadow: 45px 0 0 #0c33f5, -45px 0 0 lime;
+        filter: blur(0);
+    }
+
+    42% {
+        text-shadow: 0 0 0 #0c33f5, 0 0 0 lime;
+        filter: blur(0);
+    }
+
+    43% {
+        text-shadow: 1px 0 0 red, -1px 0 0 lime;
+        filter: blur(0);
+    }
+
+    44% {
+        text-shadow: 1px 0 0 red, -1px 0 0 lime;
+        filter: blur(0);
+    }
+
+    45% {
+        text-shadow: 1px 0 0 red, -1px 0 0 lime;
+        filter: blur(0);
+    }
+
+    46% {
+        text-shadow: 1px 0 0 red, -1px 0 0 lime;
+        filter: blur(0.5px);
+    }
+
+    47% {
+        text-shadow: -3px 0 0 red, 3px 0 0 lime;
+        filter: blur(0.5px);
+    }
+
+    48% {
+        text-shadow: -3px 0 0 red, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    49% {
+        text-shadow: -3px 0 0 red, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    50% {
+        text-shadow: -3px 0 0 red, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    51% {
+        text-shadow: 3px 0 0 red, -3px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    52% {
+        text-shadow: 3px 0 0 red, -3px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    53% {
+        text-shadow: 3px 0 0 red, -3px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    54% {
+        text-shadow: 3px 0 0 red, -3px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    55% {
+        text-shadow: 3px 0 0 red, -3px 0 0 #0c33f5;
+        filter: blur(0.5px);
+    }
+
+    56% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5;
+        filter: blur(0.5px);
+    }
+
+    57% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5;
+        filter: blur(0.5px);
+    }
+
+    58% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    59% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    60% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    61% {
+        text-shadow: 30px 0 0 red, -30px 0 0 lime;
+        filter: blur(0);
+    }
+
+    62% {
+        text-shadow: 0 0 0 red, 0 0 0 lime;
+        filter: blur(0);
+    }
+
+    63% {
+        text-shadow: 1px 0 0 red, -1px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    64% {
+        text-shadow: 1px 0 0 red, -1px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    65% {
+        text-shadow: 1px 0 0 red, -1px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    66% {
+        text-shadow: 1px 0 0 red, -1px 0 0 #0c33f5;
+        filter: blur(0.5px);
+    }
+
+    67% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5;
+        filter: blur(0.5px);
+    }
+
+    68% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    69% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    70% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    71% {
+        text-shadow: 50px 0 0 red, -50px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    72% {
+        text-shadow: 0 0 0 red, 0 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    73% {
+        text-shadow: 3px 0 0 red, -3px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    74% {
+        text-shadow: 3px 0 0 red, -3px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    75% {
+        text-shadow: 3px 0 0 red, -3px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    76% {
+        text-shadow: 3px 0 0 red, -3px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    77% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    78% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    79% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    80% {
+        text-shadow: -3px 0 0 red, 3px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    81% {
+        text-shadow: 1px 0 0 red, -1px 0 0 lime;
+        filter: blur(0);
+    }
+
+    82% {
+        text-shadow: 1px 0 0 red, -1px 0 0 lime;
+        filter: blur(0);
+    }
+
+    83% {
+        text-shadow: 1px 0 0 red, -1px 0 0 lime;
+        filter: blur(0.5px);
+    }
+
+    84% {
+        text-shadow: 1px 0 0 red, -1px 0 0 lime;
+        filter: blur(0.5px);
+    }
+
+    85% {
+        text-shadow: 1px 0 0 red, -1px 0 0 lime;
+        filter: blur(0.5px);
+    }
+
+    86% {
+        text-shadow: -3px 0 0 red, 3px 0 0 lime;
+        filter: blur(0.5px);
+    }
+
+    87% {
+        text-shadow: -3px 0 0 red, 3px 0 0 lime;
+        filter: blur(0.5px);
+    }
+
+    88% {
+        text-shadow: -3px 0 0 red, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    89% {
+        text-shadow: -3px 0 0 red, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    90% {
+        text-shadow: -3px 0 0 red, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    91% {
+        text-shadow: 60px 0 0 lime, -60px 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    92% {
+        text-shadow: 0 0 0 lime, 0 0 0 #0c33f5;
+        filter: blur(0);
+    }
+
+    92% {
+        text-shadow: 0.8px 0 0 #0c33f5, -0.8px 0 0 lime;
+        filter: blur(0);
+    }
+
+    93% {
+        text-shadow: 0.8px 0 0 #0c33f5, -0.8px 0 0 lime;
+        filter: blur(0);
+    }
+
+    94% {
+        text-shadow: 0.8px 0 0 #0c33f5, -0.8px 0 0 lime;
+        filter: blur(0);
+    }
+
+    95% {
+        text-shadow: 0.8px 0 0 #0c33f5, -0.8px 0 0 lime;
+        filter: blur(0);
+    }
+
+    96% {
+        text-shadow: -3px 0 0 #0c33f5, 3px 0 0 lime;
+        filter: blur(0);
+    }
+
+    97% {
+        text-shadow: -3px 0 0 #0c33f5, 3px 0 0 lime, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0);
+    }
+
+    98% {
+        text-shadow: -3px 0 0 #0c33f5, 3px 0 0 lime, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0);
+    }
+
+    99% {
+        text-shadow: -3px 0 0 #0c33f5, 3px 0 0 lime, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0);
+    }
+
+    100% {
+        text-shadow: -3px 0 0 #0c33f5, 3px 0 0 lime, 2px 2px #000000, 4px 4px #ffffff;
+        filter: blur(0);
+    }
+}
+
+@keyframes ease-in-animation {
+    0% {
+        left: -1000px;
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 0.50;
+    }
+
+    100% {
+        left: 0px;
+        opacity: 1;
+    }
+}
+
+.web-img-hover:hover + .web-link {
+    visibility: visible !important;
+}
+
+.web-link {
+    visibility: hidden !important;
+}
