--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -13,4 +13,35 @@
         .mob-center-align {
             text-align: center;
         }
+
+        .usep-logo{
+            height: 70px;
+            width: 70px;
+            align-self: center;
+        }
     }
+
+    @media only screen and (max-width: 768px) and (min-width: 426px) {
+        .gif{
+            width: 20%;
+            height: 20%;
+        }
+
+        .matrix-gif{
+            width: 16%;
+            height: 16%;
+        }
+
+        .books-gif{
+            width: 16%;
+            height: 16%;
+        }
+                
+    }
+
+    /* @media only screen and (max-width: 768px) and (min-width: 426px) {
+        .gif{
+            width: 20%;
+            height: 20%;
+        }
+    } */
