--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -107,6 +107,10 @@ a {
     height: 50px;
 }
 
+.fl-logo{
+    width: 100%;
+}
+
 @keyframes glitch {
     0% {
         text-shadow: 3px 0 0 red, -3px 0 0 #0c33f5, 2px 2px #000000, 4px 4px #ffffff;
@@ -635,10 +639,10 @@ a {
     }
 }
 
-.web-img-hover:hover + .web-link {
-    visibility: visible !important;
+
+
+.web-card:hover  {
+    scale: 105%;
+
 }
 
-.web-link {
-    visibility: hidden !important;
-}
