fix mobile responsive in freelance>info.js

--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -653,3 +653,7 @@ a {
 .web-link {
     visibility: hidden !important;
 } 
+
+
+    /* // "start": "react-scripts start",
+    // "build": "react-scripts build", */
