--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -14,7 +14,7 @@
             text-align: center;
         }
 
-        .usep-logo{
+        .fl-logo,.usep-logo{
             height: 70px;
             width: 70px;
             align-self: center;
